Profile img resized/alt attribute

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </ul>
             </nav>
             <div class="pro-card">
-                <img class="profile-image" src="img/profile1.jpg" alt="Profile Picture">
+                <img class="profile-image" src="img/profile1.jpg" alt="Mark Sauder's profile image">
             </div>
             <div class="hello tag">
                 <h2>Hello! My name is Mark</h2>
